--- a/base/index.html
+++ b/base/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>task 1</title>
+    <title>task </title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+<div id="webgl"></div>
 
 <script src="../lib/three.js"></script>
 <script src="./script.js"></script>
