--- a/1/index.html
+++ b/1/index.html
@@ -14,6 +14,7 @@
 <div id="webgl"></div>
 
 <script src="../lib/three.js"></script>
+<script src="../lib/OrbitControls.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
