--- a/1/exercise/index.html
+++ b/1/exercise/index.html
@@ -6,15 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>task </title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
 <div id="webgl"></div>
 
-<script src="../lib/three.js"></script>
-<script src="../lib/OrbitControls.js"></script>
-<script src="./exercise.js"></script>
+<script src="../../lib/three.js"></script>
+<script src="../../lib/OrbitControls.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
