--- a/2/exercise/index.html
+++ b/2/exercise/index.html
@@ -6,11 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../../css/reset.css">
 </head>
 <body>
 
 <div id="webgl"></div>
 
+<script src="../../lib/three.js"></script>
+<script src="../../lib/OrbitControls.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
