[modify] エフェクトを追加（途中）

--- a/2/exercise/index.html
+++ b/2/exercise/index.html
@@ -14,6 +14,11 @@
 
 <script src="../../lib/three.js"></script>
 <script src="../../lib/OrbitControls.js"></script>
+<script src="../../lib/EffectComposer.js"></script>
+<script src="../../lib/RenderPass.js"></script>
+<script src="../../lib/ShaderPass.js"></script>
+<script src="../../lib/GlitchPass.js"></script>
+<script src="../../lib/DigitalGlitch.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
